@@ -1,3 +1,9 @@
+2010-11-05 German Arias <german@xelalug.org>
+	* Modules/Projects/Application/PCAppProject.m: 
+	(-createProjectAt:) Delete the extension on the	project 
+	name to avoid file names like MyApp.project.plist
+	and an ugly name of the app (MyApp.project) at info panel.
+
 2010-08-10 Sergii Stoian <stoyan255@ukr.net>
 	* Framework/PCProjectBrowser.m:
 	(-nameOfSelectedCategory): Return 'nil' if name of subproject
